src/test/ui/resolve/suggest-path-instead-of-mod-dot-item.stderr
error[E0423]: expected value, found module `a`
  --> $DIR/suggest-path-instead-of-mod-dot-item.rs:27:5
   |
27 |     a.I
   |     ^--
   |     |
   |     did you mean `a::I`?

error[E0423]: expected value, found module `a`
  --> $DIR/suggest-path-instead-of-mod-dot-item.rs:33:5
   |
33 |     a.g()
   |     ^----
   |     |
   |     did you mean `a::g(...)`?

error[E0423]: expected value, found module `a`
  --> $DIR/suggest-path-instead-of-mod-dot-item.rs:39:5
   |
39 |     a.b.J
   |     ^--
   |     |
   |     did you mean `a::b`?

error[E0423]: expected value, found module `a::b`
  --> $DIR/suggest-path-instead-of-mod-dot-item.rs:45:5
   |
45 |     a::b.J
   |     ^^^---
   |     |  |
   |     |  did you mean `I`?
   |     did you mean `a::b::J`?

error[E0423]: expected value, found module `a`
  --> $DIR/suggest-path-instead-of-mod-dot-item.rs:52:5
   |
52 |     a.b.f();
   |     ^--
   |     |
   |     did you mean `a::b`?

error[E0423]: expected value, found module `a::b`
  --> $DIR/suggest-path-instead-of-mod-dot-item.rs:56:12
   |
56 |     v.push(a::b);
   |            ^^^-
   |               |
   |               did you mean `I`?

error[E0423]: expected value, found module `a::b`
  --> $DIR/suggest-path-instead-of-mod-dot-item.rs:62:5
   |
62 |     a::b.f()
   |     ^^^-----
   |     |  |
   |     |  did you mean `I`?
   |     did you mean `a::b::f(...)`?

error[E0423]: expected value, found module `a::b`
  --> $DIR/suggest-path-instead-of-mod-dot-item.rs:69:5
   |
69 |     a::b
   |     ^^^-
   |        |
   |        did you mean `I`?

error[E0423]: expected function, found module `a::b`
  --> $DIR/suggest-path-instead-of-mod-dot-item.rs:75:5
   |
75 |     a::b()
   |     ^^^-
   |        |
   |        did you mean `I`?

error[E0601]: main function not found

error: aborting due to 10 previous errors

